intellij-aided cleanup